--- a/算法/算法题常用方法.md
+++ b/算法/算法题常用方法.md
@@ -13,3 +13,11 @@ remove(key)：删除map中对应key的键值对
 ## StringBuffer
 
 stringBuffer.reverse()：反转
+
+## String操作
+
+s.trim():去除字符串首尾空格
+
+s.lastIndexOf(" "):最后一个空格的索引
+
+s.charAt(i):去除字符串下标为i的字符
