--- a/项目笔记/谷粒商城笔记.md
+++ b/项目笔记/谷粒商城笔记.md
@@ -156,3 +156,30 @@
 1. 微服务任何配置信息，任何配置文件都可以放在配置中心中
 2. 只要在bootstrap.properties说明加载配置中心哪些配置文件即可
 3. @Value，@ConfigurationProperties。。。以前springboot任何方法从配置文件中获取值都能使用。配置中心有的，优先使用。
+
+## Mabatis Plus
+
+1. 整合MyBatis-Plus
+
+   - 导入依赖
+
+     ```xml
+     <dependency>
+         <groupId>com.baomidou</groupId>
+         <artifactId>mybatis-plus-boot-starter</artifactId>
+         <version>3.5.3.1</version>
+     </dependency>
+     ```
+
+   - 配置
+
+     1. 配置数据源
+        - 导入数据库驱动
+        - 在application.yml配置数据源相关信息
+     2. 配置MyBatis-Plus
+        - 使用@MapperScan
+        - 告诉Mybatis-plus，sql映射位置
+
+2. 逻辑删除
+
+   [逻辑删除 | MyBatis-Plus (baomidou.com)](https://baomidou.com/pages/6b03c5/)
