--- a/算法/数组.md
+++ b/算法/数组.md
@@ -150,3 +150,57 @@ class Solution {
 }
 ```
 
+## 下一个排列
+
+整数数组的一个 **排列** 就是将其所有成员以序列或线性顺序排列。
+
+- 例如，`arr = [1,2,3]` ，以下这些都可以视作 `arr` 的排列：`[1,2,3]`、`[1,3,2]`、`[3,1,2]`、`[2,3,1]` 。
+
+题干的意思是：找出这个数组排序出的所有数中，刚好比当前数大的那个数
+
+比如当前 nums = [1,2,3]。这个数是123，找出1，2，3这3个数字排序可能的所有数，排序后，比123大的那个数 也就是132
+
+```java
+class Solution {
+    public void nextPermutation(int[] nums) {
+        int length = nums.length;
+        int i = length - 2;
+        // 1. 首先从后向前查找第一个顺序对 (i,i+1)
+        // 满足 a[i]<a[i+1]
+        // 这样「较小数」即为 a[i]
+        // 此时 [i+1,n)必然是下降序列。
+        while (i >= 0 && nums[i] >= nums[i+1]) {
+            i--;
+        }
+        if (i >= 0) {
+            // 如果找到了顺序对，那么在区间 [i+1,n)
+            // 中从后向前查找第一个元素 j 满足 a[i]<a[j]这样「较大数」即为 a[j]
+            int right = length - 1;
+            while (right > i && nums[i] >= nums[right]) {
+                right--;
+            }
+            swap(nums,i,right);
+        }
+        // 此时可以证明区间 [i+1,n)必为降序
+        reverse(nums, i+1);
+    }
+
+    private static void reverse(int[] nums,int start) {
+        int length = nums.length;
+        int left = start;
+        int right = length - 1;
+        while (left < right) {
+            swap(nums, left, right);
+            left ++;
+            right --;
+        }
+    }
+
+    private static void swap(int[] nums, int i, int j) {
+        int temp = nums[i];
+        nums[i] = nums[j];
+        nums[j] = temp;
+    }
+}
+```
+
