--- a/后端/java/20-内部类.md
+++ b/后端/java/20-内部类.md
@@ -75,16 +75,23 @@ public class Application {
 ```java
 package com.oop.demo09;
 
-public class Outer {
-
+public class Outer {	// 外部类
+		private int n1 = 100;
+  	private void m2() {}; // 私有方法
     //局部内部类
-    public void method(){
-
+    public void method(){ // 方法
+				// 1.局部内部类是定义在外部类的局部位置，通常在方法。
+      	// 3.不能添加访问修饰符，但是可以使用final修饰
+      	// 4.作用域：仅仅在定义它的方法或代码块中
         class Inner{
+          	// 2. 可以直接访问外部类的所有成员，包含私有的
             public void in(){
-                
+              	// 5.局部内部类可以直接访问外部类的成员，
+                System.out.println("n1=" + n1);
+              	m2();
             }
         }
+      // 6. 外部类在方法中，可以创建内部类对象，然后调用方法。
     }
 }
 ```
